fixtures/runtime_semantics/errors/type-error-uncaught.php
<?php
// runtime-semantics: category=errors expect=fail
throw new TypeError("bad");
